# D4P

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.bat  build.py  build.sh  extract_data.py
data/: skill_types.json
include/: build.hpp  class.hpp  gui.hpp  item.hpp  skill.hpp
include/affix/: activeAspect.hpp  affix.hpp  passiveAspect.hpp  stat.hpp
src/: build.cpp  class.cpp  gui.cpp  main.cpp  skill.cpp
